# ac-perf-data

./: .contest.py.swp  .env.example  .gitignore  .test.py.swp  README.md  app.py  constants.py  contest.py  fetch.py  jobs.py  logger.py  logs.txt  logs.txt.2024-06-21  logs.txt.2024-06-29  main.py  note.txt  once.py  performance.py  pyproject.toml  requirements.txt  test_units.py  user.py  usernames.txt  util.py
data/: Readme.md  abc334_contest_type.json  abc356_ranking_to_perf.json  abc357_algo_average_performance.json  abc357_ranking_to_perf.json  abc359_algo_average_performance.json  abc359_ranking_to_perf.json  abc359_rounded_perf_history.json  abc360_algo_average_performance.json  abc360_ranking_to_perf.json  abc360_rounded_perf_history.json  abc361_algo_average_performance.json  abc361_ranking_to_perf.json  abc361_rounded_perf_history.json  abc362_algo_average_performance.json  abc362_ranking_to_perf.json  abc362_rounded_perf_history.json  abc363_algo_average_performance.json  abc363_ranking_to_perf.json  abc363_rounded_perf_history.json  abc364_algo_average_performance.json  abc364_ranking_to_perf.json  abc364_rounded_perf_history.json  abc365_algo_average_performance.json  abc365_ranking_to_perf.json  abc365_rounded_perf_history.json  abc366_algo_average_performance.json  abc366_ranking_to_perf.json  abc366_rounded_perf_history.json  abc367_algo_average_performance.json  abc367_ranking_to_perf.json  abc367_rounded_perf_history.json  abc368_algo_average_performance.json  abc368_ranking_to_perf.json  abc368_rounded_perf_history.json  abc369_ranking_to_perf.json  (+387 more)
(+104067 files in other folders)
