[project]
name = "ac-perf-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "seleniumbase>=4.41.7",
    "tqdm>=4.67.1",
]
